examples/test/testpolicy5357.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5357
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key10: value3
      key39: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value9
          key40: value31
          key21: value30
      podSelector:
        matchLabels:
          key18: value46
          key5: value18
